2023-10-04  Niels Möller  <nisse@lysator.liu.se>

	* umac-l2.c (_nettle_umac_l2_final): Delete redundant assignment.

2023-10-03  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (check-fat): Reduce tests to run to TS_FAT, to speed
	up tests.

	* testsuite/Makefile.in (TS_FAT): Define list of tests relevant
	for testing algorithm variants in fat builds.

	* testsuite/ecc-mod-arith-test.c: Reduce test count, aiming to get
	test to complete in roughly 0.1s.
	* testsuite/ecc-mod-test.c: Likewise.
	* testsuite/ecc-modinv-test.c: Likewise.
	* testsuite/ecc-mul-a-test.c: Likewise.
	* testsuite/ecc-redc-test.c: Likewise.
	* testsuite/ecc-sqrt-test.c: Likewise.
	* testsuite/eddsa-compress-test.c: Likewise.
	* testsuite/poly1305-test.c: Likewise.
	* testsuite/random-prime-test.c: Likewise.
	* testsuite/rsa-compute-root-test.c: Likewise.
	* testsuite/rsa-sec-decrypt-test.c: Likewise.

	* testsuite/Makefile.in (TS_SH): Delete tools tests from list.
	* tools/Makefile.in (check): Run tools tests from this target.
	(TS_ALL): New variable.
	(DISTFILES): Add TS_ALL files.
	* testsuite/teardown-env: Deleted, intead let make clean delete
	test files.
	* tools/nettle-pbkdf2-test: Moved, from testseuite/.
	* tools/sexp-conv-test: Likewise.
	* tools/pkcs1-conv-test: Likewise.

2023-08-02  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac: Replace obsoleted macros, require autoconf-2.69,
	from 2012, or later.
	* aclocal.m4: Likewise.

	* aclocal.m4 (LSH_FUNC_STRERROR): Delete macro.
	(LSH_FUNC_STRSIGNAL): Delete unused macro.
	* configure.ac: Delete usage of LSH_FUNC_STRERROR.
	* tools/nettle-hash.c (main): Use strerror unconditionally.
	* tools/nettle-pbkdf2.c (main): Likewise.

2023-08-01  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac: Delete special handling of rntcl; it should be
	treated like any other cross compiler. Delete obsolete check of
	ac_cv_prog_cc_stdc.

2023-06-01  Niels Möller  <nisse@lysator.liu.se>

	* Released Nettle-3.9.1.
