@@ -63,15 +63,15 @@ nettle_bswap32 (uint32_t x)
 #endif
 
 #if WORDS_BIGENDIAN
-#define bswap64_if_le(x) (x)
-#else
-#define bswap64_if_le nettle_bswap64
-#endif
-
-#if WORDS_BIGENDIAN
 #define bswap64_if_be nettle_bswap64
+#define bswap32_if_be nettle_bswap32
+#define bswap64_if_le(x) (x)
+#define bswap32_if_le(x) (x)
 #else
 #define bswap64_if_be(x) (x)
+#define bswap32_if_be(x) (x)
+#define bswap64_if_le nettle_bswap64
+#define bswap32_if_le nettle_bswap32
 #endif
 
 #endif /* NETTLE_BSWAP_INTERNAL_H_INCLUDED */
